[tool.poetry]
name = "dz-13-1-purenkov"
version = "0.1.0"
description = ""
authors = ["whitenesss <144126783+whitenesss@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dz_13"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
